--- a/index.html
+++ b/index.html
@@ -3,59 +3,424 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Saif Ghonem | Data Analyst</title>
+  <title>Saif Mohamed Ghonem | Data Analyst</title>
+  <meta name="description" content="Data Analyst building decision focused analysis and dashboards using Python, SQL, Excel, Power BI, and Tableau" />
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header class="container">
-    <h1>Saif Ghonem</h1>
-    <p class="subtitle">Data Analyst</p>
 
-    <div class="links">
-      <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-      <a href="https://github.com/" target="_blank">GitHub</a>
+<body>
+  <div id="bg3d" aria-hidden="true"></div>
+
+  <header class="nav">
+    <div class="nav-inner">
+      <a class="brand" href="#top">Saif Ghonem</a>
+
+      <nav class="nav-links">
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#dashboards">Dashboards</a>
+        <a href="#certs">Certifications</a>
+        <a href="#contact">Contact</a>
+      </nav>
+
+      <button class="nav-toggle" id="navToggle" aria-label="Open menu">
+        <span></span><span></span><span></span>
+      </button>
+    </div>
+
+    <div class="nav-mobile" id="navMobile">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
+      <a href="#dashboards">Dashboards</a>
+      <a href="#certs">Certifications</a>
+      <a href="#contact">Contact</a>
     </div>
   </header>
 
-  <main class="container">
-    <section id="about" class="card">
-      <h2>About</h2>
-      <p>
-        I build data projects using Python, web scraping, and dashboards.
-        I focus on clean code, clear insights, and reproducible workflows.
-      </p>
-    </section>
+  <main id="top" class="page">
+    <section class="hero container">
+      <div class="hero-left">
+        <div class="badge">Data Analyst</div>
 
-    <section id="projects" class="card">
-      <h2>Projects</h2>
+        <h1>
+          Saif Mohamed Ghonem
+        </h1>
 
-      <div class="project">
-        <h3>Yallakora Match Scraper</h3>
-        <p>Scraped match data with Python and BeautifulSoup then exported to CSV.</p>
-        <div class="project-links">
-          <a href="https://github.com/SaifGhonem/yallakora-match-scraper" target="_blank">GitHub Repo</a>
+        <p class="lead">
+          Data Analyst with one year of hands on experience across freelance and training projects
+          I focus on decision support not tool usage
+        </p>
+
+        <div class="cta">
+          <a class="btn primary" href="#projects">View Projects</a>
+          <a class="btn" href="#dashboards">Dashboards</a>
+        </div>
+
+        <div class="meta">
+          <div class="meta-item">
+            <div class="meta-k">Location</div>
+            <div class="meta-v">Egypt</div>
+          </div>
+          <div class="meta-item">
+            <div class="meta-k">Email</div>
+            <div class="meta-v"><a href="mailto:saifghonem90@gmail.com">saifghonem90@gmail.com</a></div>
+          </div>
+          <div class="meta-item">
+            <div class="meta-k">Links</div>
+            <div class="meta-v">
+              <a href="https://github.com/SaifGhonem" target="_blank" rel="noreferrer">GitHub</a>
+              <span class="dot"></span>
+              <a href="https://www.linkedin.com/in/saif-ghonem-a54b672aa/" target="_blank" rel="noreferrer">LinkedIn</a>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="project">
-        <h3>Sales Dashboard</h3>
-        <p>Power BI dashboard for sales performance and discount strategy.</p>
-        <div class="project-links">
-          <a href="#" target="_blank">Live Dashboard</a>
+      <div class="hero-right">
+        <div class="glass-card">
+          <div class="glass-title">What I deliver</div>
+          <ul class="bullets">
+            <li>Clean data models that scale</li>
+            <li>Dashboards that answer business questions</li>
+            <li>Insights that change decisions</li>
+            <li>Fast iteration with the client</li>
+          </ul>
+
+          <div class="hero-stats">
+            <div class="stat">
+              <div class="stat-n">6+</div>
+              <div class="stat-t">Projects</div>
+            </div>
+            <div class="stat">
+              <div class="stat-n">1</div>
+              <div class="stat-t">Year</div>
+            </div>
+            <div class="stat">
+              <div class="stat-n">2</div>
+              <div class="stat-t">Primary Tools</div>
+            </div>
+          </div>
+
+          <div class="hint">
+            Scroll to see 3D motion and section animations
+          </div>
         </div>
       </div>
-
     </section>
 
-    <section id="contact" class="card">
-      <h2>Contact</h2>
-      <p>Email: yourmail@example.com</p>
+    <section id="about" class="section container reveal">
+      <div class="section-head">
+        <h2>About</h2>
+        <p>
+          I worked on real world datasets in sales, fleet management, aviation, retail, and healthcare
+          I translate business needs into insights and dashboards using Python, SQL, Excel, Power BI, and Tableau
+        </p>
+      </div>
+
+      <div class="grid two">
+        <div class="panel tilt">
+          <h3>Mindset</h3>
+          <p>
+            I treat outliers as signals and investigate the cause
+            I focus on what helps decisions and operations
+          </p>
+        </div>
+
+        <div class="panel tilt">
+          <h3>Current</h3>
+          <p>
+            Bachelor of Nursing
+            Mansoura University
+            Third Year
+          </p>
+        </div>
+      </div>
     </section>
+
+    <section id="skills" class="section container reveal">
+      <div class="section-head">
+        <h2>Skills</h2>
+        <p>Clear split between tools and analysis work</p>
+      </div>
+
+      <div class="grid three">
+        <div class="panel tilt">
+          <h3>Technical</h3>
+          <div class="chips">
+            <span class="chip">Python</span>
+            <span class="chip">SQL</span>
+            <span class="chip">Power BI</span>
+            <span class="chip">Excel</span>
+            <span class="chip">Tableau</span>
+          </div>
+        </div>
+
+        <div class="panel tilt">
+          <h3>Data Skills</h3>
+          <div class="chips">
+            <span class="chip">Data Cleaning</span>
+            <span class="chip">EDA</span>
+            <span class="chip">Data Visualization</span>
+            <span class="chip">Dashboard Design</span>
+            <span class="chip">Data Analysis</span>
+            <span class="chip">Web Scraping</span>
+          </div>
+        </div>
+
+        <div class="panel tilt">
+          <h3>Tools</h3>
+          <div class="chips">
+            <span class="chip">Pandas</span>
+            <span class="chip">NumPy</span>
+            <span class="chip">Matplotlib</span>
+            <span class="chip">Seaborn</span>
+            <span class="chip">Requests</span>
+            <span class="chip">BeautifulSoup</span>
+            <span class="chip">Selenium</span>
+            <span class="chip">SQL Server</span>
+            <span class="chip">VS Code</span>
+            <span class="chip">Jupyter</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="section container reveal">
+      <div class="section-head">
+        <h2>Projects</h2>
+        <p>Freelance and training projects with clear outcomes</p>
+      </div>
+
+      <div class="cards">
+        <article class="card tilt">
+          <div class="card-top">
+            <div class="card-title">Cottonil Retail Analysis</div>
+            <div class="tag">Freelance</div>
+          </div>
+          <p class="card-desc">
+            Unstructured HTML exports with wrong structure
+            Built ETL and data model
+            Investigated outliers as business signals
+            Delivered multi page interactive dashboard
+          </p>
+          <div class="card-meta">
+            <span class="pill">Excel</span>
+            <span class="pill">Power BI</span>
+            <span class="pill">ETL</span>
+            <span class="pill">Data Model</span>
+          </div>
+          <div class="card-actions">
+            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
+            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+          </div>
+          <div class="note">Replace links when ready</div>
+        </article>
+
+        <article class="card tilt">
+          <div class="card-top">
+            <div class="card-title">Fleet Management Analysis</div>
+            <div class="tag">Freelance</div>
+          </div>
+          <p class="card-desc">
+            Data scattered across sheets
+            Linked vehicles by registration
+            Designed relationships for scalable analysis
+            KPIs for maintenance fuel and status
+            Second delivery focused on tables and KPI views
+          </p>
+          <div class="card-meta">
+            <span class="pill">Excel</span>
+            <span class="pill">Power BI</span>
+            <span class="pill">Data Modeling</span>
+          </div>
+          <div class="card-actions">
+            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
+            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+          </div>
+          <div class="note">Replace links when ready</div>
+        </article>
+
+        <article class="card tilt">
+          <div class="card-top">
+            <div class="card-title">Hospitals and Pharmacies Overview</div>
+            <div class="tag">Freelance</div>
+          </div>
+          <p class="card-desc">
+            SQL sourced data with partial dummy data
+            Built overview KPIs and dashboards
+            Led to more dashboard contracts after delivery
+          </p>
+          <div class="card-meta">
+            <span class="pill">SQL</span>
+            <span class="pill">Power BI</span>
+            <span class="pill">KPIs</span>
+          </div>
+          <div class="card-actions">
+            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
+            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+          </div>
+          <div class="note">Replace links when ready</div>
+        </article>
+
+        <article class="card tilt">
+          <div class="card-top">
+            <div class="card-title">Airline Ticket Pricing Analysis</div>
+            <div class="tag">Freelance</div>
+          </div>
+          <p class="card-desc">
+            Pricing dataset across months and currencies
+            Analyzed pricing behavior and purchase rate
+            Delivered interactive dashboard based on client requests
+          </p>
+          <div class="card-meta">
+            <span class="pill">Excel</span>
+            <span class="pill">Power BI</span>
+          </div>
+          <div class="card-actions">
+            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
+            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+          </div>
+          <div class="note">Replace links when ready</div>
+        </article>
+
+        <article class="card tilt">
+          <div class="card-top">
+            <div class="card-title">HR Data Analysis</div>
+            <div class="tag">Client</div>
+          </div>
+          <p class="card-desc">
+            Untabular HR dataset
+            Restructured for analysis and future reporting
+            Built interactive Excel dashboard and delivered successfully
+          </p>
+          <div class="card-meta">
+            <span class="pill">Excel</span>
+            <span class="pill">Dashboard</span>
+          </div>
+          <div class="card-actions">
+            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+          </div>
+          <div class="note">Replace links when ready</div>
+        </article>
+
+        <article class="card tilt">
+          <div class="card-top">
+            <div class="card-title">Football Match Web Scraper</div>
+            <div class="tag">Training</div>
+          </div>
+          <p class="card-desc">
+            Scrapes match and tournament data by date
+            Exports structured CSV ready for analysis
+          </p>
+          <div class="card-meta">
+            <span class="pill">Python</span>
+            <span class="pill">Requests</span>
+            <span class="pill">BeautifulSoup</span>
+          </div>
+          <div class="card-actions">
+            <a class="link" href="https://github.com/SaifGhonem/yallakora-match-scraper" target="_blank" rel="noreferrer">GitHub Repo</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section id="dashboards" class="section container reveal">
+      <div class="section-head">
+        <h2>Dashboards</h2>
+        <p>Live embeds and screenshots</p>
+      </div>
+
+      <div class="grid two">
+        <div class="panel">
+          <h3>Live embeds</h3>
+          <p>
+            Add Power BI publish links and embed iframes
+            Put each dashboard story in two lines
+          </p>
+
+          <div class="embed">
+            <div class="embed-head">
+              <div class="embed-title">Overview Dashboard</div>
+              <div class="embed-sub">Replace this iframe src</div>
+            </div>
+
+            <iframe
+              title="Power BI"
+              src=""
+              loading="lazy"
+              referrerpolicy="no-referrer"
+              allowfullscreen="true">
+            </iframe>
+          </div>
+        </div>
+
+        <div class="panel">
+          <h3>Screenshots</h3>
+          <p>
+            Create folder assets
+            Add images and link them inside project cards
+          </p>
+
+          <div class="shot-grid">
+            <a class="shot" href="#" aria-label="Screenshot 1"></a>
+            <a class="shot" href="#" aria-label="Screenshot 2"></a>
+            <a class="shot" href="#" aria-label="Screenshot 3"></a>
+            <a class="shot" href="#" aria-label="Screenshot 4"></a>
+          </div>
+
+          <div class="note">
+            Add real images later
+            Example path assets/cottonil-1.png
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="certs" class="section container reveal">
+      <div class="section-head">
+        <h2>Certifications</h2>
+        <p>Diploma and platform certificates</p>
+      </div>
+
+      <div class="grid two">
+        <div class="panel tilt">
+          <h3>Diploma</h3>
+          <p>Data Analysis Diploma from Mazen Analytics</p>
+        </div>
+        <div class="panel tilt">
+          <h3>DataCamp</h3>
+          <p>Add certificate list and screenshots when ready</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section container reveal">
+      <div class="section-head">
+        <h2>Contact</h2>
+        <p>Fast ways to reach me</p>
+      </div>
+
+      <div class="contact">
+        <a class="btn primary" href="mailto:saifghonem90@gmail.com">Email</a>
+        <a class="btn" href="https://www.linkedin.com/in/saif-ghonem-a54b672aa/" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a class="btn" href="https://github.com/SaifGhonem" target="_blank" rel="noreferrer">GitHub</a>
+      </div>
+    </section>
+
+    <footer class="footer container">
+      <div class="footer-row">
+        <div>© <span id="year"></span> Saif Mohamed Ghonem</div>
+        <div class="footer-links">
+          <a href="#top">Top</a>
+          <a href="#projects">Projects</a>
+          <a href="#contact">Contact</a>
+        </div>
+      </div>
+    </footer>
   </main>
 
-  <footer class="container footer">
-    <p>© 2026 Saif Ghonem</p>
-  </footer>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
