--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 
       <div class="cards">
         <article class="card tilt">
+          <img class="card-img" src="assets/cottonil-1.png" alt="Cottonil dashboard">
           <div class="card-top">
             <div class="card-title">Cottonil Retail Analysis</div>
             <div class="tag">Freelance</div>
@@ -219,6 +220,7 @@
         </article>
 
         <article class="card tilt">
+          <img class="card-img" src="assets/fleet-1.png" alt="Fleet dashboard">
           <div class="card-top">
             <div class="card-title">Fleet Management Analysis</div>
             <div class="tag">Freelance</div>
@@ -306,6 +308,7 @@
         </article>
 
         <article class="card tilt">
+          <img class="card-img" src="assets/scraper-1.png" alt="Web scraping project">
           <div class="card-top">
             <div class="card-title">Football Match Web Scraper</div>
             <div class="tag">Training</div>
@@ -424,3 +427,4 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
