--- a/index.html
+++ b/index.html
@@ -367,10 +367,11 @@
           </p>
 
           <div class="shot-grid">
-            <a class="shot" href="#" aria-label="Screenshot 1"></a>
-            <a class="shot" href="#" aria-label="Screenshot 2"></a>
-            <a class="shot" href="#" aria-label="Screenshot 3"></a>
-            <a class="shot" href="#" aria-label="Screenshot 4"></a>
+              <a class="shot" href="assets/cottonil-main.png" target="_blank"></a>
+              <a class="shot" href="assets/cottonil-sales & discount.png" target="_blank"></a>
+              <a class="shot" href="assets/cottonil-returns.png" target="_blank"></a>
+              <a class="shot" href="assets/cottonil-suppliers.png" target="_blank"></a>
+              <a class="shot" href="assets/cottonil-inventory.png" target="_blank"></a> 
           </div>
 
           <div class="note">
@@ -427,4 +428,5 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
