--- a/index.html
+++ b/index.html
@@ -213,9 +213,14 @@
             <span class="pill">Data Model</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
-            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="assets/cottonil-main.png" target="_blank">Main</a>
+            <a class="link" href="assets/cottonil-sales & discount.png" target="_blank">Sales & Discount</a>
+            <a class="link" href="assets/cottonil-returns.png" target="_blank">Returns</a>
+            <a class="link" href="assets/cottonil-suppliers.png" target="_blank">Suppliers</a>
+            <a class="link" href="assets/cottonil-inventory.png" target="_blank">Inventory</a>
           </div>
+
+
           <div class="note">Replace links when ready</div>
         </article>
 
@@ -428,5 +433,6 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
