--- a/index.html
+++ b/index.html
@@ -243,8 +243,10 @@
             <span class="pill">Data Modeling</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
-            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="assets/fleet-executive-dashboard.png" target="_blank">Executive</a>
+            <a class="link" href="assets/fleet-fuel-analysis.png" target="_blank">Fuel</a>
+            <a class="link" href="assets/fleet-repair.png" target="_blank">Repair</a>
+            <a class="link" href="assets/fleet-vehicle-details.png" target="_blank">Vehicle Details</a>
           </div>
           <div class="note">Replace links when ready</div>
         </article>
@@ -377,6 +379,7 @@
               <a class="shot" href="assets/cottonil-returns.png" target="_blank"></a>
               <a class="shot" href="assets/cottonil-suppliers.png" target="_blank"></a>
               <a class="shot" href="assets/cottonil-inventory.png" target="_blank"></a> 
+            
           </div>
 
           <div class="note">
@@ -433,6 +436,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
