--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@
               <a class="shot" href="assets/cottonil-suppliers.png" target="_blank"></a>
               <a class="shot" href="assets/cottonil-inventory.png" target="_blank"></a> 
             
+              <a class="link" href="assets/fleet-executive-dashboard.png" target="_blank"></a>
+              <a class="link" href="assets/fleet-fuel-analysis.png" target="_blank"></a>
+              <a class="link" href="assets/fleet-repair.png" target="_blank"></a>
+              <a class="link" href="assets/fleet-vehicle-details.png" target="_blank"></a>
           </div>
 
           <div class="note">
@@ -436,6 +440,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
