--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
             <span class="pill">Data Modeling</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="assets/fleet-executive-dashboard.png" target="_blank">Executive</a>
-            <a class="link" href="assets/fleet-fuel-analysis.png" target="_blank">Fuel</a>
-            <a class="link" href="assets/fleet-repair.png" target="_blank">Repair</a>
-            <a class="link" href="assets/fleet-vehicle-details.png" target="_blank">Vehicle Details</a>
+            <a class="link" href="assets/fleet-Executive-Dashboard.png" target="_blank">Executive</a>
+            <a class="link" href="assets/fleet-Fuel-Analysis.png" target="_blank">Fuel</a>
+            <a class="link" href="assets/fleet-Repair.png" target="_blank">Repair</a>
+            <a class="link" href="assets/fleet-Vehicle-Details.png" target="_blank">Vehicle Details</a>
           </div>
           <div class="note">Replace links when ready</div>
         </article>
@@ -440,6 +440,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
