--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="cta">
           <a class="btn primary" href="#projects">View Projects</a>
           <a class="btn" href="#dashboards">Dashboards</a>
+          <a class="btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">WhatsApp</a>
         </div>
 
         <div class="meta">
@@ -422,6 +423,8 @@
         <a class="btn primary" href="mailto:saifghonem90@gmail.com">Email</a>
         <a class="btn" href="https://www.linkedin.com/in/saif-ghonem-a54b672aa/" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="btn" href="https://github.com/SaifGhonem" target="_blank" rel="noreferrer">GitHub</a>
+        <a class="btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">WhatsApp</a>
+
       </div>
     </section>
 
@@ -440,6 +443,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
