--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         </article>
 
         <article class="card tilt">
+          <img class="card-img" src="assets/pharma-1.png" alt="Hospitals and Pharmacies dashboard">
           <div class="card-top">
             <div class="card-title">Hospitals and Pharmacies Overview</div>
             <div class="tag">Freelance</div>
@@ -271,6 +272,7 @@
         </article>
 
         <article class="card tilt">
+          <img class="card-img" src="assets/airplane-1.png" alt="Airline dashboard">
           <div class="card-top">
             <div class="card-title">Airline Ticket Pricing Analysis</div>
             <div class="tag">Freelance</div>
@@ -291,6 +293,7 @@
         </article>
 
         <article class="card tilt">
+          <img class="card-img" src="assets/HR-1.png" alt="HR dashboard">
           <div class="card-top">
             <div class="card-title">HR Data Analysis</div>
             <div class="tag">Client</div>
@@ -437,6 +440,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
