--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="#dashboards">Dashboards</a>
         <a href="#certs">Certifications</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -33,7 +32,6 @@
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
-      <a href="#dashboards">Dashboards</a>
       <a href="#certs">Certifications</a>
       <a href="#contact">Contact</a>
     </div>
@@ -44,9 +42,7 @@
       <div class="hero-left">
         <div class="badge">Data Analyst</div>
 
-        <h1>
-          Saif Mohamed Ghonem
-        </h1>
+        <h1>Saif Mohamed Ghonem</h1>
 
         <p class="lead">
           Data Analyst with one year of hands on experience across freelance and training projects
@@ -55,8 +51,7 @@
 
         <div class="cta">
           <a class="btn primary" href="#projects">View Projects</a>
-          <a class="btn" href="#dashboards">Dashboards</a>
-        
+          <a class="btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">WhatsApp</a>
         </div>
 
         <div class="meta">
@@ -104,8 +99,7 @@
             </div>
           </div>
 
-          <div class="hint">
-          </div>
+          <div class="hint"></div>
         </div>
       </div>
     </section>
@@ -213,14 +207,8 @@
             <span class="pill">Data Model</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="assets/cottonil-main.png" target="_blank">Main</a>
-            <a class="link" href="assets/cottonil-sales & discount.png" target="_blank">Sales & Discount</a>
-            <a class="link" href="assets/cottonil-returns.png" target="_blank">Returns</a>
-            <a class="link" href="assets/cottonil-suppliers.png" target="_blank">Suppliers</a>
-            <a class="link" href="assets/cottonil-inventory.png" target="_blank">Inventory</a>
+            <a class="link" href="screenshots.html?p=cottonil">Screenshots</a>
           </div>
-
-
         </article>
 
         <article class="card tilt">
@@ -242,10 +230,7 @@
             <span class="pill">Data Modeling</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="assets/fleet-Executive-Dashboard.png" target="_blank">Executive</a>
-            <a class="link" href="assets/fleet-Fuel-Analysis.png" target="_blank">Fuel</a>
-            <a class="link" href="assets/fleet-repair.png" target="_blank">Repair</a>
-            <a class="link" href="assets/fleet-vehicle-details.png" target="_blank">Vehicle Details</a>
+            <a class="link" href="screenshots.html?p=fleet">Screenshots</a>
           </div>
         </article>
 
@@ -266,8 +251,7 @@
             <span class="pill">KPIs</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
-            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="screenshots.html?p=pharma">Screenshots</a>
           </div>
         </article>
 
@@ -287,8 +271,7 @@
             <span class="pill">Power BI</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="#" target="_blank" rel="noreferrer">Live Dashboard</a>
-            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="screenshots.html?p=airline">Screenshots</a>
           </div>
         </article>
 
@@ -308,7 +291,7 @@
             <span class="pill">Dashboard</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="#" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="screenshots.html?p=hr">Screenshots</a>
           </div>
         </article>
 
@@ -331,64 +314,6 @@
             <a class="link" href="https://github.com/SaifGhonem/yallakora-match-scraper" target="_blank" rel="noreferrer">GitHub Repo</a>
           </div>
         </article>
-      </div>
-    </section>
-
-    <section id="dashboards" class="section container reveal">
-      <div class="section-head">
-        <h2>Dashboards</h2>
-        <p>Live embeds and screenshots</p>
-      </div>
-
-      <div class="grid two">
-        <div class="panel">
-          <h3>Live embeds</h3>
-          <p>
-            Add Power BI publish links and embed iframes
-            Put each dashboard story in two lines
-          </p>
-
-          <div class="embed">
-            <div class="embed-head">
-              <div class="embed-title">Overview Dashboard</div>
-              <div class="embed-sub">Replace this iframe src</div>
-            </div>
-
-            <iframe
-              title="Power BI"
-              src=""
-              loading="lazy"
-              referrerpolicy="no-referrer"
-              allowfullscreen="true">
-            </iframe>
-          </div>
-        </div>
-
-        <div class="panel">
-          <h3>Screenshots</h3>
-          <p>
-            Create folder assets
-            Add images and link them inside project cards
-          </p>
-
-          <div class="shot-grid">
-              <a class="shot" href="assets/cottonil-main.png" target="_blank"></a>
-              <a class="shot" href="assets/cottonil-sales & discount.png" target="_blank"></a>
-              <a class="shot" href="assets/cottonil-returns.png" target="_blank"></a>
-              <a class="shot" href="assets/cottonil-suppliers.png" target="_blank"></a>
-              <a class="shot" href="assets/cottonil-inventory.png" target="_blank"></a> 
-            
-              <a class="shot" href="assets/fleet-executive-dashboard.png" target="_blank"></a>
-              <a class="shot" href="assets/fleet-fuel-analysis.png" target="_blank"></a>
-              <a class="shot" href="assets/fleet-repair.png" target="_blank"></a>
-              <a class="shot" href="assets/fleet-vehicle-details.png" target="_blank"></a>
-          </div>
-
-          <div class="note">
-            Add real images later
-            Example path assets/cottonil-1.png
-          </div>
-        </div>
       </div>
     </section>
 
@@ -421,7 +346,6 @@
         <a class="btn" href="https://www.linkedin.com/in/saif-ghonem-a54b672aa/" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="btn" href="https://github.com/SaifGhonem" target="_blank" rel="noreferrer">GitHub</a>
         <a class="btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">WhatsApp</a>
-
       </div>
     </section>
 
@@ -440,15 +364,3 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
