--- a/index.html
+++ b/index.html
@@ -116,17 +116,21 @@
         <div class="panel tilt">
           <h3>Mindset</h3>
           <p>
-            I treat outliers as signals and investigate the cause
-            I focus on what helps decisions and operations
+            I approach data with a decision first mindset
+            Every analysis starts with a business question
+            I treat outliers as signals not errors
+            I validate assumptions before building visuals
+            I focus on clarity over complexity
+            My goal is to help stakeholders act not just view data
           </p>
         </div>
 
         <div class="panel tilt">
           <h3>Current</h3>
           <p>
-            Bachelor of Nursing
-            Mansoura University
-            Third Year
+            Freelance Data Analyst
+            Working on real client projects across retail fleet aviation and healthcare
+            Delivering dashboards and analytical models for decision support
           </p>
         </div>
       </div>
@@ -362,5 +366,6 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
