--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
         <div class="panel tilt">
           <h3>Mindset</h3>
           <p>
-            I approach data with a decision first mindset
-            Every analysis starts with a business question
-            I treat outliers as signals not errors
-            I validate assumptions before building visuals
-            I focus on clarity over complexity
-            My goal is to help stakeholders act not just view data
+            <li>I approach data with a decision first mindset<li>
+            <li>Every analysis starts with a business question<li>
+            <li>I treat outliers as signals not errors<li>
+            <li>I validate assumptions before building visuals<li>
+            <li>I focus on clarity over complexity<li>
+            <li>My goal is to help stakeholders act not just view data<li>
           </p>
         </div>
 
         <div class="panel tilt">
           <h3>Current</h3>
           <p>
-            Freelance Data Analyst
-            Working on real client projects across retail fleet aviation and healthcare
-            Delivering dashboards and analytical models for decision support
+            <li>Freelance Data Analyst<li>
+            <li>Working on real client projects across retail fleet aviation and healthcare<li>
+            <li>Delivering dashboards and analytical models for decision support<li>
           </p>
         </div>
       </div>
@@ -367,6 +367,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
