--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
         <div class="panel tilt">
           <h3>Mindset</h3>
           <p>
-            <li>I approach data with a decision first mindset<li>
-            <li>Every analysis starts with a business question<li>
-            <li>I treat outliers as signals not errors<li>
-            <li>I validate assumptions before building visuals<li>
-            <li>I focus on clarity over complexity<li>
-            <li>My goal is to help stakeholders act not just view data<li>
+            <li>I approach data with a decision first mindset
+            <li>Every analysis starts with a business question
+            <li>I treat outliers as signals not errors
+            <li>I validate assumptions before building visuals
+            <li>I focus on clarity over complexity
+            <li>My goal is to help stakeholders act not just view data
           </p>
         </div>
 
         <div class="panel tilt">
           <h3>Current</h3>
           <p>
-            <li>Freelance Data Analyst<li>
-            <li>Working on real client projects across retail fleet aviation and healthcare<li>
-            <li>Delivering dashboards and analytical models for decision support<li>
+            <li>Freelance Data Analyst
+            <li>Working on real client projects across retail fleet aviation and healthcare
+            <li>Delivering dashboards and analytical models for decision support
           </p>
         </div>
       </div>
@@ -367,6 +367,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
