--- a/index.html
+++ b/index.html
@@ -115,23 +115,23 @@
       <div class="grid two">
         <div class="panel tilt">
           <h3>Mindset</h3>
-          <p>
-            <li>I approach data with a decision first mindset
-            <li>Every analysis starts with a business question
-            <li>I treat outliers as signals not errors
-            <li>I validate assumptions before building visuals
-            <li>I focus on clarity over complexity
-            <li>My goal is to help stakeholders act not just view data
-          </p>
+          <ul class="bullets">
+            <li>I approach data with a decision first mindset</li>
+            <li>Every analysis starts with a business question</li>
+            <li>I treat outliers as signals not errors</li>
+            <li>I validate assumptions before building visuals</li>
+            <li>I focus on clarity over complexity</li>
+            <li>My goal is to help stakeholders act not just view data</li>
+          </ul>
         </div>
 
         <div class="panel tilt">
           <h3>Current</h3>
-          <p>
-            <li>Freelance Data Analyst
-            <li>Working on real client projects across retail fleet aviation and healthcare
-            <li>Delivering dashboards and analytical models for decision support
-          </p>
+          <ul class="bullets">
+            <li>Freelance Data Analyst<li>
+            <li>Working on real client projects across retail fleet aviation and healthcare<li>
+            <li>Delivering dashboards and analytical models for decision support<li>
+          </ul>
         </div>
       </div>
     </section>
@@ -367,6 +367,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
