--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
 
         <div class="panel tilt">
           <h3>Current</h3>
+        
           <ul class="bullets">
-            <li>Freelance Data Analyst<li>
-            <li>Working on real client projects across retail fleet aviation and healthcare<li>
-            <li>Delivering dashboards and analytical models for decision support<li>
+            <li>Freelance Data Analyst</li>
+            <li>Working on real client projects across retail fleet aviation and healthcare</li>
+            <li>Delivering dashboards and analytical models for decision support</li>
           </ul>
         </div>
       </div>
@@ -367,6 +368,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
